syntax = "proto3";

package dev.baaart.rtx.grpc.models.clientstreaming;

option java_multiple_files = true;
option java_package = "dev.baaart.rtx.grpc.models.clientstreaming";
option java_outer_classname = "ClientStreamingProto";

// The greeting service definition.
service ClientStreamingService {
  // Sends a greeting
  rpc SayHello (stream HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
